Changed to umami analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/SaifURL-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SaifURL</title>
+    <script defer src="https://umami.saifdev.xyz/script.js" data-website-id="1e59b2d6-9f36-4f48-a5c1-48ea96d8d2f0"></script>
   </head>
   <body>
     <div id="root"></div>
